Bug #29903 The CMake build method does not produce the embedded library.
Submitted: 19 Jul 2007 17:14 Modified: 6 Aug 2007 21:31
Reporter: Iggy Galarza
Status: Closed
Category:libmysqld Severity:S1 (Critical)
Version:5.1 OS:Microsoft Windows
Assigned to: Iggy Galarza Target Version:

[19 Jul 2007 17:14] Iggy Galarza
Description:
The CMake build method does not produce the embedded library or it's example binaries.

How to repeat:
Build Windows solution produced by the CMake build method.

Suggested fix:
Make sure that:
1. CMake build method produces libmysqld.dll and the example binaries.
2. mysql-test-run.pl is capable of launching and testing the embedded library.
[19 Jul 2007 17:17] Iggy Galarza
http://lists.mysql.com/commits/27160
http://lists.mysql.com/commits/27682
[27 Jul 2007 17:51] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/31715

ChangeSet@1.2577, 2007-07-27 11:50:35-04:00, iggy@alf.(none) +9 -0
  Bug#29903 The CMake build method does not produce the embedded library.
  - Changes to correct and test Windows embedded build.
[3 Aug 2007 20:43] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/32086

ChangeSet@1.2583, 2007-08-03 14:43:12-04:00, iggy@amd64.(none) +11 -0
  Bug#29903 The CMake build method does not produce the embedded library.
  - Changes to correct and test Windows embedded build.
[3 Aug 2007 21:19] Iggy Galarza
Pushed to 5.1-maint.
[4 Aug 2007 0:56] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/32094

ChangeSet@1.2584, 2007-08-03 18:56:24-04:00, iggy@amd64.(none) +1 -0
  Bug#29903 The CMake build method does not produce the embedded library.
  - Additional changes to correct link failure in Do-linkall script.
[4 Aug 2007 3:08] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/32095

ChangeSet@1.2585, 2007-08-03 21:08:48-04:00, iggy@amd64.(none) +2 -0
  Bug#29903 The CMake build method does not produce the embedded library.
  - GCov fix.
[6 Aug 2007 20:13] Bugs System
Pushed into 5.1.21-beta
[6 Aug 2007 21:31] Paul DuBois
Noted in 5.1.21 changelog.

On Windows, the CMake build process did not produce the embedded
server library or related binaries.
[6 Aug 2007 23:16] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/32165

ChangeSet@1.2558, 2007-08-06 23:16:01+02:00, kent@mysql.com +22 -0
  CMakeLists.txt (many), win/README, mysql_manifest.cmake, configure.js:
    Additional changes for bug#29903
    - Changed to do embedded build part as normal build, when
      WITH_EMBEDDED_SERVER is set.
    - Allow both normal and debug build with embedded.
    - Build static embedded library by pointing out all source and compile
      it all, i.e. not building libraries from libraries, not portable.
    - Let embedded use generated files from the "sql" directory, added
      dependencies to make sure built before embedded.
    - Mark library "dbug" in TARGET_LINK_LIBRARIES() with "debug", so only
      linked in when debug target is used.
    - Removed change of target name with "mysqld${MYSQLD_EXE_SUFFIX}", as
      others can't depend on it, not defined at configure time. Instead
      set the output file name.
    - Created work around for bug in CMake 2.4.6 and output names, to
      set the "mysqld<suffix>.pdb" name to the same base name.
    - Set the correct manifest "name" (patch by iggy)
[24 Aug 2007 23:58] Bugs System
Pushed into 5.1.23-beta