Bug#29903 The CMake build method does not produce the embedded library. - Changes to correct and test Windows embedded build.